<resources>
    <string name="app_name">S-Job</string>
    <!--Custom String of Admin-->
    <string name="qlttd">Quản lý trang tìm việc</string>
    <string name="qltk">Quản lý tài khoản</string>
    <string name="logout">Đăng xuất</string>
    <string name="cnyc">Chấp nhận yêu cầu doanh nghiệp</string>
    <string name="dstuyendung">Danh sách trang web tuyển dụng</string>
    <string name="dstaikhoan">Danh sách tài khoản</string>
    <string name="themtrang">Thêm trang web tuyển dụng</string>
    <string name="dsyeucau">Danh sách yêu cầu doanh nghiệp</string>
    <string name="btnthemweb">Thêm trang web tuyển dụng</string>
    <string name="btnthem">Thêm</string>
    <string name="btnxoa">Xóa</string>
    <string name="btnhuy">Hủy</string>
    <string name="btndongy">Đồng ý</string>
    <string name="btntuchoi">Từ chối</string>
    <string name="urltrangwweb">URL trang web:</string>
    <string name="tentrangweb">Tên trang web:</string>
    <string name="api">API:</string>
    <string name="tentaikhoan">Tên tài khoản:</string>
    <string name="matkhau">Mật khẩu:</string>
    <string name="douutien">Độ ưu tiên:</string>
    <string name="trangthai">Trạng thái:</string>
    <string name="versionpb" translatable="false">v1.0.0</string>
    <string name="khoa">Khóa</string>
    <string name="listresetpass" translatable="false">Danh sách yêu cầu Reset Password</string>
    <string name="luu">Lưu</string>
    <string name="tvchangepass">Thay đổi mật khẩu</string>
    <string name="tvcurrentpass">Mật khẩu hiện tại:</string>
    <string name="tvnewpass">Mật khẩu mới:</string>
    <string name="tvcomfirmpass">Xác nhận mật khẩu:</string>
    <string name="btnsave">Lưu</string>
    <string name="btncancel">Quay lại</string>
    <string name="mokhoatk">Mở Khóa</string>
    <string name="changepass">Thay đổi mật khẩu (yêu cầu đăng nhập lại)</string>
    <string name="ttchitiettaikhoan">Thông tin chi tiết tài khoản</string>
    <!--Custom String of Admin-->
    <!--Custom String of Login Signup-->
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="forgotpass">Quên mật khẩu ?</string>
    <string name="donthaveaccount"> Bạn chưa có tài khoản ?</string>
    <string name="company">Doanh nghiệp</string>
    <string name="User">Người dùng</string>
    <string name="name">Tên tài khoản</string>
    <string name="email">Email</string>
    <string name="pass">Mật khẩu</string>
    <string name="comfirmpass">Xác nhận mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="diachidk">Địa chỉ</string>
    <!--Custom String of Login Signup-->

    <!--    Nhan Custom String-->
    <string name="tieuDe">Tiêu Đề</string>
    <string name="timeDemo">Deline</string>
    <string name="mucLuong">Mức Lương</string>
    <string name="bangCap">Bằng Cấp</string>
    <string name="nganhNghe">Ngành Nghề</string>
    <string name="soLuongTuyen">Số Lượng Tuyển</string>
    <string name="diachi">Địa Chỉ</string>
    <string name="moTa">Mô Tả</string>
    <string name="trove">Trở Về</string>
    <string name="dsDangTin">Danh Sách Đăng Tin</string>
    <string name="ngoiSao">0</string>
    <string name="khuVucTuyen">Khu Vực Tuyển</string>
    <string name="inputText">Nhập Thiếu Thông Tin!!!</string>
    <string name="thongBao">Thông Báo !</string>
    <string name="taoBai">Tạo Bài Thành Công !</string>
    <string name="dulieu">Không Có Dữ Liệu !</string>
    <string name="ngonNgu">Ngôn Ngữ</string>
    <string name="hoTro">Hỗ Trợ</string>
    <string name="moKhoa">Mở Khoá Tài Khoản</string>
    <string name="quenMatKhau">Quên Mật Khẩu</string>
    <string name="khac">Khác</string>
    <string name="gui">Gữi</string>
    <string name="khong">Không</string>
    <string name="khoataikhoan">Bạn Đã Bị Khoá Tài Khoản!</string>
    <string name="thuvien">Thư Viện</string>
    <string name="listBaiDang">Danh Sách Bài Đăng</string>
    <string name="caiDatThongTin">Cài Đặt Thông Tin</string>
    <string name="doimatKhau">Đổi Mật Khẩu</string>
    <string name="thoat">Thoát</string>
    <string name="titleUpload">Chọn Thư Viện Ảnh</string>
    <string name="mesUpload">Bạn Hãy Chọn Thư Viện Để Lấy Ảnh ?</string>
    <string name="BtnChupAnh">Chụp Ảnh</string>
    <string name="BtnThuVien">Thư Viện Ảnh</string>
    <string name="toastDoiPass">Change Pass Success!!!</string>
    <string name="toastXacNhanPass">Mật Khẩu Mới Và Mật Khẩu Xác Nhận Không Khớp!!!</string>
    <string name="toastMatKhauMacDinhPass">Mật Khẩu Mặc Định Sai!!!</string>
    <string name="toastdaguiHotro">Đã Gữi Hỗ Trợ!!!</string>
    <string name="inputPassMacDinh">Nhập Mật Khẩu Mặc Định...</string>
    <string name="inputPassMoi">Nhập Mật Khẩu Mới...</string>
    <string name="inputPassComfim">Nhập Xác Nhận Mật Khẩu...</string>


    <!--    Nhan Custom String-->
    <!-- String of resetpass -->
    <string name="titlers">Reset Password</string>
    <string name="mailrs">Email</string>
    <string name="passrs">New Pass</string>
    <string name="comfirmrs">Comfirm</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="minimum_password" translatable="false">Mật khẩu phải > 6 ký tự</string>
    <string name="auth_failed" translatable="false">Đăng nhập thất bại !</string>
</resources>