<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">
    <RelativeLayout
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/logo"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/logo1"
            android:fontFamily="serif"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="24dp"
        android:layout_width="220dp"
        android:layout_height="550dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints"
        android:background="@drawable/login_pannel"/>
    <LinearLayout
        android:id="@+id/login_panel"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@+id/logo">
        <androidx.cardview.widget.CardView
            android:layout_margin="32dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp">
                <EditText
                    android:paddingHorizontal="4dp"
                    android:id="@+id/name"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:background="@drawable/textinput"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="4dp"
                    android:hint="@string/email"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:background="@drawable/textinput" />
                <EditText
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="4dp"
                    android:hint="@string/pass"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:background="@drawable/textinput" />
                <EditText
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="4dp"
                    android:hint="@string/comfirmpass"
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:background="@drawable/textinput"
                    android:height="40sp"
                    android:layout_height="40sp" />
                <EditText
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="4dp"
                    android:hint="@string/phone"
                    android:id="@+id/phone"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:background="@drawable/textinput" />
                <EditText
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="4dp"
                    android:hint="@string/diachi"
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:background="@drawable/textinput" />
                   <RadioGroup
                       android:gravity="center"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/rdoGroup"
                       android:orientation="horizontal">
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/rdoCompany"
                           android:text="@string/company"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/rdoUser"
                           android:text="@string/User"/>
                   </RadioGroup>
<!--                <Spinner-->
<!--                    android:layout_marginTop="8dp"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:background="@drawable/textinput"/>-->

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/login_panel"
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/custom_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>