<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vang"
    android:orientation="vertical"
    tools:context=".ChiTietTaiKhoan">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:textStyle="bold"
        android:text="@string/ttchitiettaikhoan"
        android:textSize="30sp"
        android:layout_gravity="center">
    </TextView>
    <LinearLayout
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentaikhoan"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edttentaikhoan"
            android:layout_weight="1"
            android:layout_marginTop="5sp"
            android:padding="6dp"
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matkhau"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtmatkhau"
            android:layout_weight="1"
            android:padding="6dp"
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/douutien"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtdouutien"
            android:layout_weight="1"
            android:padding="6dp"
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trangthai"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edttrangthai"
            android:layout_weight="1"
            android:padding="6dp"
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnkhoa"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khoa"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnmokhoa"
            android:text="@string/mokhoatk"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnluu"
            android:text="@string/luu"
            android:background="@drawable/custom_button"/>
    </LinearLayout>

</LinearLayout>