<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">
    <RelativeLayout
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/logo"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >
        <TextView
            android:paddingVertical="10dp"
            android:layout_marginTop="42dp"
            android:paddingHorizontal="80dp"
            android:background="@drawable/logo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:fontFamily="serif"
            android:textSize="40sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="24dp"
        android:layout_width="220dp"
        android:layout_height="480dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints"
        android:background="@drawable/login_pannel"/>
    <LinearLayout
        android:id="@+id/login_panel"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_margin="32dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtuser"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/textinput"
                    android:hint="@string/name"
                    android:paddingHorizontal="4dp" />

                <EditText
                    android:id="@+id/edtpass"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/textinput"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingHorizontal="4dp" />

                <TextView
                    android:id="@+id/resetpw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="right"
                    android:text="@string/forgotpass" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/sigup"
            android:layout_marginLeft="15dp"
            android:textSize="24sp"
            android:textColor="@android:color/holo_orange_dark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionpb"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"></TextView>
    </LinearLayout>
    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/login_panel"
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/custom_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>